--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -274,7 +274,7 @@
   margin-top: 16px !important;
   padding: 24px 0 !important;
 }
-._1wht7jl {
+.tab__content-wrapper {
   min-height: 500px !important;
 }
 ._26piifo {
@@ -287,7 +287,7 @@
   line-height: 1.25em !important;
   color: #484848 !important;
 }
-._1wcr140x {
+.hero-banner__input-container {
   font-size: 16px !important;
   line-height: 24px !important;
   letter-spacing: normal !important;
@@ -308,7 +308,7 @@
   display: block !important;
   width: 100% !important;
 }
-._14fdu48d {
+.hero-banner__input-feild {
   font-size: 16px !important;
   line-height: 24px !important;
   letter-spacing: normal !important;
@@ -326,34 +326,34 @@
   width: 100% !important;
   margin: 0 !important;
 }
-._14fdu48d:focus {
+.hero-banner__input-feild:focus {
   outline: 0 !important;
 }
-._14fdu48d::-ms-clear {
+.hero-banner__input-feild::-ms-clear {
   display: none !important;
 }
-._14fdu48d::-webkit-input-placeholder {
+.hero-banner__input-feild::-webkit-input-placeholder {
   color: #767676 !important;
   opacity: 1 !important;
 }
-._14fdu48d::-moz-placeholder {
+.hero-banner__input-feild::-moz-placeholder {
   color: #767676 !important;
   opacity: 1 !important;
 }
-._14fdu48d:-moz-placeholder {
+.hero-banner__input-feild:-moz-placeholder {
   color: #767676 !important;
   opacity: 1 !important;
 }
-._14fdu48d:-ms-input-placeholder {
+.hero-banner__input-feild:-ms-input-placeholder {
   color: #767676 !important;
   opacity: 1 !important;
 }
-._14fdu48d::placeholder {
+.hero-banner__input-feild::placeholder {
   color: #767676 !important;
   opacity: 1 !important;
 }
 @supports (--custom: properties) {
-  ._14fdu48d {
+  .hero-banner__input-feild {
     font-size: var(--font-form-element-font-size, 16px) !important;
     line-height: var(--font-form-element-line-height, 24px) !important;
     letter-spacing: var(--font-form-element-letter-spacing, normal) !important;
@@ -378,23 +378,23 @@
     padding-left: var(--spacing-form-element-horizontal, 11px) !important;
     padding-right: var(--spacing-form-element-horizontal, 11px) !important;
   }
-  ._14fdu48d::-webkit-input-placeholder {
+  .hero-banner__input-feild::-webkit-input-placeholder {
     color: var(--color-placeholder, #767676) !important;
   }
-  ._14fdu48d::-moz-placeholder {
+  .hero-banner__input-feild::-moz-placeholder {
     color: var(--color-placeholder, #767676) !important;
   }
-  ._14fdu48d:-moz-placeholder {
+  .hero-banner__input-feild:-moz-placeholder {
     color: var(--color-placeholder, #767676) !important;
   }
-  ._14fdu48d:-ms-input-placeholder {
+  .hero-banner__input-feild:-ms-input-placeholder {
     color: var(--color-placeholder, #767676) !important;
   }
-  ._14fdu48d::placeholder {
+  .hero-banner__input-feild::placeholder {
     color: var(--color-placeholder, #767676) !important;
   }
 }
-._qs2tkci {
+.hero-banner__submit-btn {
   cursor: default !important;
   display: inline-block !important;
   margin: 0 !important;
@@ -429,23 +429,23 @@
   border-color: transparent !important;
   color: #fff !important;
 }
-._qs2tkci::-moz-focus-inner {
+.hero-banner__submit-btn::-moz-focus-inner {
   border: 0 !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._qs2tkci:focus::-moz-focus-inner {
+.hero-banner__submit-btn:focus::-moz-focus-inner {
   border: 1px dotted #000 !important;
 }
-._qs2tkci:-moz-focusring {
+.hero-banner__submit-btn:-moz-focusring {
   outline-color: #000 !important;
 }
-._qs2tkci:disabled {
+.hero-banner__submit-btn:disabled {
   background: rgba(0, 132, 137, 0.3) !important;
   border-color: transparent !important;
   color: #fff !important;
 }
-._qs2tkci:focus {
+.hero-banner__submit-btn:focus {
   box-shadow: 0 0 0 4px #fff, 0 0 0 5px #717171,
     0 0 0 6px rgba(255, 255, 255, 0.5) !important;
   outline: 0 !important;
@@ -453,26 +453,26 @@
   -moz-transition: box-shadow 0.2s !important;
   transition: box-shadow 0.2s !important;
 }
-._qs2tkci:focus::-moz-focus-inner {
+.hero-banner__submit-btn:focus::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._qs2tkci:focus:focus::-moz-focus-inner {
+.hero-banner__submit-btn:focus:focus::-moz-focus-inner {
   border: none !important;
 }
-._qs2tkci:focus:-moz-focusring {
+.hero-banner__submit-btn:focus:-moz-focusring {
   outline: 0 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._qs2tkci:focus {
+  .hero-banner__submit-btn:focus {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
 @supports (--custom: properties) {
-  ._qs2tkci {
+  .hero-banner__submit-btn {
     border-radius: var(--border-button-border-radius, 4px) !important;
     font-size: var(--font-button-font-size, 16px) !important;
     line-height: var(--font-button-line-height, 24px) !important;
@@ -498,7 +498,7 @@
     border-color: var(--color-buttons-default-border, transparent) !important;
     color: var(--color-buttons-default-text, #fff) !important;
   }
-  ._qs2tkci:disabled {
+  .hero-banner__submit-btn:disabled {
     background: var(
       --color-buttons-default-disabled-color,
       rgba(0, 132, 137, 0.3)
@@ -510,13 +510,13 @@
     color: var(--color-buttons-default-disabled-text, #fff) !important;
   }
 }
-._1qzt34e {
+.notification__question-strong {
   display: block !important;
   font-size: 18px !important;
   line-height: 24px !important;
   margin-top: 16px !important;
 }
-._n22mu3 {
+.notification__question-p {
   font-size: 16px !important;
   line-height: 24px !important;
   margin-top: 8px !important;
@@ -595,7 +595,7 @@
     color: var(--color-buttons-default-disabled-text, #fff) !important;
   }
 }
-._ftj2sg4 {
+.hero-banner__submit-btn-text {
   font-size: 16px !important;
   line-height: 24px !important;
   letter-spacing: normal !important;
@@ -21835,7 +21835,7 @@ full__margin-bottom {
   top: 50% !important;
   transform: translateY(-50%) !important;
 }
-._1p3joamp {
+.hero-banner__label {
   margin: 0 !important;
   word-wrap: break-word !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
@@ -21910,7 +21910,7 @@ full__margin-bottom {
 ._1asnseo {
   --color-text-muted: #ebebeb !important;
 }
-._16tcko6 {
+.notification__question-content {
   padding-left: 24px !important;
   padding-right: 24px !important;
   margin: 0 !important;
@@ -21942,7 +21942,7 @@ full__margin-bottom {
   line-height: 20px !important;
   margin-top: 8px !important;
 }
-._ftj2sg4 {
+.hero-banner__submit-btn-text {
   font-size: 16px !important;
   line-height: 24px !important;
   letter-spacing: normal !important;
@@ -21951,7 +21951,7 @@ full__margin-bottom {
   color: inherit !important;
 }
 @supports (--custom: properties) {
-  ._ftj2sg4 {
+  .hero-banner__submit-btn-text {
     font-size: var(--font-button-font-size, 16px) !important;
     line-height: var(--font-button-line-height, 24px) !important;
     letter-spacing: var(--font-button-letter-spacing, normal) !important;
@@ -41640,7 +41640,7 @@ tr.show-desktop {
   position: relative !important;
   display: inline !important;
 }
-._z5mecy {
+.header__nav-btn-container-icon-wrapper {
   -webkit-box-align: center !important;
   -ms-flex-align: center !important;
   -webkit-align-items: center !important;
@@ -48073,7 +48073,7 @@ tr.show-desktop {
   white-space: nowrap !important;
   width: 1px !important;
 }
-._1wcr140x {
+.hero-banner__input-container {
   font-size: 16px !important;
   line-height: 24px !important;
   letter-spacing: normal !important;
@@ -48092,7 +48092,7 @@ tr.show-desktop {
   width: 100% !important;
 }
 @supports (--custom: properties) {
-  ._1wcr140x {
+  .hero-banner__input-container {
     font-size: var(--font-form-element-font-size, 16px) !important;
     line-height: var(--font-form-element-line-height, 24px) !important;
     letter-spacing: var(--font-form-element-letter-spacing, normal) !important;
@@ -48136,11 +48136,11 @@ tr.show-desktop {
   }
 }
 
-._178faes {
+.hero-banner__input-wrapper {
   overflow: hidden !important;
   position: relative !important;
 }
-._14fdu48d {
+.hero-banner__input-feild {
   font-size: 16px !important;
   line-height: 24px !important;
   letter-spacing: normal !important;
@@ -48155,7 +48155,7 @@ tr.show-desktop {
   margin: 0 !important;
 }
 @supports (--custom: properties) {
-  ._14fdu48d {
+  .hero-banner__input-feild {
     font-size: var(--font-form-element-font-size, 16px) !important;
     line-height: var(--font-form-element-line-height, 24px) !important;
     letter-spacing: var(--font-form-element-letter-spacing, normal) !important;
@@ -48366,11 +48366,11 @@ tr.show-desktop {
   line-height: 1.375em !important;
   color: inherit !important;
 }
-._9hxttoo {
+.hero-banner__label-wrapper {
   display: block !important;
   width: 100% !important;
 }
-._1p3joamp {
+.hero-banner__label {
   margin: 0 !important;
   overflow-wrap: break-word !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
