--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1075,7 +1075,7 @@
     overflow: clip!important
   }
 }
-._gpfii59 {
+.header__nav-profile-badge {
   background-color: var(--ihf-tp-q)!important;
   box-shadow: 0 0 0 1.5px var(--f-mkcy-f)!important;
   position: absolute!important;
@@ -1097,7 +1097,7 @@
   animation-timing-function: cubic-bezier(.175,.885,.35,1.1)!important
 }
 @supports (--a:a) {
-  ._gpfii59 {
+  .header__nav-profile-badge {
     background-color: var(--header_brand-color,var(--ihf-tp-q))!important
   }
 }
