rename explore-filter-daterange & main_content__sidebar-calendar-wrapper -> relative, remove excess properties

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -634,10 +634,8 @@
 .main_content__sidebar {
   margin-top: -16px !important;
 }
-.main_content__sidebar-calendar-wrapper {
+.relative {
   position: relative !important;
-  text-align: left !important;
-  background: #fff !important;
 }
 .main_content__calendar-overlay {
   position: relative !important;
