--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -11127,10 +11127,8 @@ fieldset[disabled] .btn {
   min-height: 100% !important;
   visibility: hidden !important;
 }
-.explore-filter-daterange {
+.relative {
   position: relative !important;
-  text-align: left !important;
-  background: #fff !important;
 }
 .explore-filter-daterange__days {
   position: relative !important;
