rename main_content__calendar-overlay & explore-filter-daterange__days -> calendar__days

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -11130,7 +11130,7 @@ fieldset[disabled] .btn {
 .relative {
   position: relative !important;
 }
-.explore-filter-daterange__days {
+.calendar__days {
   position: relative !important;
   margin-left: 9px !important;
 }
