--- a/src/css/components/explore-filter-daterange.css
+++ b/src/css/components/explore-filter-daterange.css
@@ -8,7 +8,7 @@
 .relative {
   position: relative !important;
 }
-.explore-filter-daterange__days {
+.calendar__days {
   position: relative !important;
   margin-left: 9px !important;
 }
