--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -637,7 +637,7 @@
 .relative {
   position: relative !important;
 }
-.main_content__calendar-overlay {
+.calendar__days {
   position: relative !important;
   margin-left: 9px !important;
 }
