--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -3584,7 +3584,7 @@
   white-space: nowrap !important;
   text-decoration: none !important;
 }
-.h-100 {
+.w-100 {
   width: 100% !important;
 }
 .css-loader {
