--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -7443,9 +7443,8 @@ select[disabled] {
     rgba(255, 255, 255, 0) 94.47%
   ) !important;
 }
-.full__height {
+.h-full {
   height: 100% !important;
-  overflow: hidden !important;
 }
 .filter__small-margin-x {
   margin-right: -24px !important;
@@ -38355,7 +38354,7 @@ tr.show-desktop {
   flex: 0 0 100% !important;
   max-width: 100% !important;
 }
-.full__height {
+.h-full {
   height: 100% !important;
 }
 ._1nhfz2 {
