--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -24585,7 +24585,7 @@ html :where(img[class*='wp-image-']) {
   position: relative !important;
   padding-top: 50% !important;
 }
-._skzmvy {
+.overlay {
   position: absolute !important;
   top: 0 !important;
   left: 0 !important;
@@ -38357,7 +38357,7 @@ tr.show-desktop {
 .h-full {
   height: 100% !important;
 }
-._1nhfz2 {
+.overlay {
   position: absolute !important;
   top: 0 !important;
   left: 0 !important;
