rename mw-100 -> max-w-full

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4226,7 +4226,7 @@ select[disabled] {
   margin: 0 !important;
   padding: 0 !important;
 }
-.mw-100 {
+.max-w-full {
   max-width: 100%;
 }
 .w-100 {
