--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -3584,7 +3584,7 @@
   white-space: nowrap !important;
   text-decoration: none !important;
 }
-.w-100 {
+.w-full {
   width: 100% !important;
 }
 .css-loader {
