--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -5,7 +5,7 @@
 .flex {
   display: flex !important;
 }
-.hide-scrollbar::-webkit-scrollbar {
+.hidden-scrollbar::-webkit-scrollbar {
   display: none !important;
 }
 .overflow-y-hidden {
