replace footer__utility-spacer-wrapper -> hidden inline-block-lg, create inline-block-lg

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4088,6 +4088,9 @@ select[disabled] {
   .hidden-lg {
     display: none !important;
   }
+  .inline-block-lg {
+    display: inline-block !important;
+  }
 }
 @media (min-width: 1440px) {
   .d-xl-block {
