--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -60,6 +60,9 @@
   .hidden-lg {
     display: none !important;
   }
+  .inline-block-lg {
+    display: inline-block !important;
+  }
 }
 @media (min-width: 1440px) {
   .d-xl-block {
