replace main_content__header-date-wrapper -> hidden inline-md

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4076,6 +4076,9 @@ select[disabled] {
   .flex-md {
     display: flex !important;
   }
+  .inline-md {
+    display: inline !important;
+  }
 }
 @media (max-width: 744px) {
   .row-reverse-xs {
