--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -48,6 +48,9 @@
   .flex-md {
     display: flex !important;
   }
+  .inline-md {
+    display: inline !important;
+  }
 }
 @media (max-width: 744px) {
   .row-reverse-xs {
