--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -35,6 +35,15 @@
 .translateY-15 {
   transform: translateY(15px);
 }
+@media (min-width: 375px) {
+  .flex-row-full-width {
+    padding-left: 24px !important;
+    padding-right: 24px !important;
+  }
+  .block-sm {
+    display: block !important;
+  }
+}
 @media (min-width: 744px) {
   .block-md {
     display: block !important;
@@ -548,12 +557,6 @@
   padding-right: 24px !important;
   margin-left: auto !important;
   margin-right: auto !important;
-}
-@media (min-width: 375px) {
-  .flex-row-full-width {
-    padding-left: 24px !important;
-    padding-right: 24px !important;
-  }
 }
 @media (min-width: 744px) {
   .flex-row-full-width {
