rename d-xl-block -> block-xxl

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4117,7 +4117,7 @@ select[disabled] {
   }
 }
 @media (min-width: 1440px) {
-  .d-xl-block {
+  .block-xxl {
     display: block !important;
   }
 }
