--- a/src/css/layouts/footer.css
+++ b/src/css/layouts/footer.css
@@ -117,11 +117,11 @@
   padding: 0 !important;
   display: flex !important;
 }
-.footer-hr-lg {
+.footer-hr-xl {
   display: none;
 }
 @media (min-width: 744px) {
-  .footer-hr-lg {
+  .footer-hr-xl {
     display: block;
   }
 }
