--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -16304,12 +16304,12 @@ h3:first-child {
 @media (min-width: 1128px) {
   ._1xg5zmcz {
     -ms-grid-columns: 1fr !important;
-    grid-column-gap: var(--mls-grid-vgap-lg, 24px) !important;
-    grid-row-gap: var(--mls-grid-hgap-lg, 24px) !important;
-    -webkit-column-gap: var(--mls-grid-vgap-lg, 24px) !important;
-    -moz-column-gap: var(--mls-grid-vgap-lg, 24px) !important;
-    column-gap: var(--mls-grid-vgap-lg, 24px) !important;
-    row-gap: var(--mls-grid-hgap-lg, 24px) !important;
+    grid-column-gap: var(--mls-grid-vgap-xl, 24px) !important;
+    grid-row-gap: var(--mls-grid-hgap-xl, 24px) !important;
+    -webkit-column-gap: var(--mls-grid-vgap-xl, 24px) !important;
+    -moz-column-gap: var(--mls-grid-vgap-xl, 24px) !important;
+    column-gap: var(--mls-grid-vgap-xl, 24px) !important;
+    row-gap: var(--mls-grid-hgap-xl, 24px) !important;
     grid-template-columns: 1fr !important;
   }
 }
@@ -16342,16 +16342,16 @@ h3:first-child {
 }
 @media (min-width: 1128px) {
   ._10q0vngt {
-    background: var(--mls-sc-bg-lg) !important;
-    padding-left: var(--mls-sc-spl-lg) !important;
-    padding-right: var(--mls-sc-spr-lg) !important;
-    padding-top: var(--mls-sc-spt-lg, 48px) !important;
-    padding-bottom: var(--mls-sc-spb-lg, 48px) !important;
+    background: var(--mls-sc-bg-xl) !important;
+    padding-left: var(--mls-sc-spl-xl) !important;
+    padding-right: var(--mls-sc-spr-xl) !important;
+    padding-top: var(--mls-sc-spt-xl, 48px) !important;
+    padding-bottom: var(--mls-sc-spb-xl, 48px) !important;
   }
 }
 @media (min-width: 950px) {
   ._10q0vngt {
-    padding-top: var(--mls-sc-spt-lg, 48px) !important;
+    padding-top: var(--mls-sc-spt-xl, 48px) !important;
   }
 }
 @media (min-width: 1440px) {
@@ -16414,7 +16414,7 @@ h3:first-child {
 }
 @media (min-width: 1128px) and (max-width: 1439px) {
   ._17t88vi {
-    border-radius: var(--mls-wr-cr-lg) !important;
+    border-radius: var(--mls-wr-cr-xl) !important;
   }
 }
 @media (min-width: 1440px) {
@@ -16771,11 +16771,11 @@ h3:first-child {
 }
 @media (min-width: 1128px) {
   ._kzbt0 {
-    background: var(--mls-sc-bg-lg) !important;
-    padding-left: var(--mls-sc-spl-lg) !important;
-    padding-right: var(--mls-sc-spr-lg) !important;
-    padding-top: var(--mls-sc-spt-lg, 48px) !important;
-    padding-bottom: var(--mls-sc-spb-lg, 48px) !important;
+    background: var(--mls-sc-bg-xl) !important;
+    padding-left: var(--mls-sc-spl-xl) !important;
+    padding-right: var(--mls-sc-spr-xl) !important;
+    padding-top: var(--mls-sc-spt-xl, 48px) !important;
+    padding-bottom: var(--mls-sc-spb-xl, 48px) !important;
   }
 }
 @media (min-width: 1440px) {
@@ -16858,7 +16858,7 @@ h3:first-child {
 }
 @media (min-width: 1128px) and (max-width: 1439px) {
   ._6r50og {
-    border-radius: var(--mls-wr-cr-lg) !important;
+    border-radius: var(--mls-wr-cr-xl) !important;
   }
 }
 @media (min-width: 1440px) {
@@ -17153,19 +17153,19 @@ h3:first-child {
 @media (min-width: 1128px) {
   ._14eklyy {
     -ms-grid-columns: repeat(
-      var(--mls-grid-col-lg, 4),
+      var(--mls-grid-col-xl, 4),
       minmax(0, 1fr)
     ) !important;
     grid-template-columns: repeat(
-      var(--mls-grid-col-lg, 4),
+      var(--mls-grid-col-xl, 4),
       minmax(0, 1fr)
     ) !important;
-    grid-column-gap: var(--mls-grid-vgap-lg, 24px) !important;
-    grid-row-gap: var(--mls-grid-hgap-lg, 24px) !important;
-    -webkit-column-gap: var(--mls-grid-vgap-lg, 24px) !important;
-    -moz-column-gap: var(--mls-grid-vgap-lg, 24px) !important;
-    column-gap: var(--mls-grid-vgap-lg, 24px) !important;
-    row-gap: var(--mls-grid-hgap-lg, 24px) !important;
+    grid-column-gap: var(--mls-grid-vgap-xl, 24px) !important;
+    grid-row-gap: var(--mls-grid-hgap-xl, 24px) !important;
+    -webkit-column-gap: var(--mls-grid-vgap-xl, 24px) !important;
+    -moz-column-gap: var(--mls-grid-vgap-xl, 24px) !important;
+    column-gap: var(--mls-grid-vgap-xl, 24px) !important;
+    row-gap: var(--mls-grid-hgap-xl, 24px) !important;
   }
 }
 ._hnt42ig,
@@ -28033,7 +28033,7 @@ html :where(img[class*='wp-image-']) {
 }
 @media (min-width: 1128px) {
   .bs4u5d4[class][class] {
-    width: var(--dls-baseColumn-width-lg);
+    width: var(--dls-baseColumn-width-xl);
   }
 }
 @media (min-width: 1128px) {
@@ -28071,8 +28071,8 @@ html :where(img[class*='wp-image-']) {
 }
 @media (min-width: 1128px) {
   .dir-ltr.bs4u5d4[class][class] {
-    margin-left: var(--dls-baseColumn-leadingOffset-lg);
-    margin-right: var(--dls-baseColumn-trailingOffset-lg);
+    margin-left: var(--dls-baseColumn-leadingOffset-xl);
+    margin-right: var(--dls-baseColumn-trailingOffset-xl);
   }
 }
 @media (min-width: 1128px) {
@@ -28759,7 +28759,7 @@ html :where(img[class*='wp-image-']) {
   }
 }
 @media (min-width: 1200px) {
-  .flex-lg {
+  .flex-xl {
     display: flex !important;
   }
 }
@@ -29576,8 +29576,8 @@ html :where(img[class*='wp-image-']) {
   clear: both;
 }
 .col-5,
-.col-lg-3,
-.col-lg-6,
+.col-xl-3,
+.col-xl-6,
 .col-md-2,
 .col-md-9 {
   position: relative;
@@ -29600,11 +29600,11 @@ html :where(img[class*='wp-image-']) {
   }
 }
 @media (min-width: 1128px) {
-  .col-lg-3 {
+  .col-xl-3 {
     width: 25%;
     float: left;
   }
-  .col-lg-6 {
+  .col-xl-6 {
     width: 50%;
     float: left;
   }
@@ -30109,15 +30109,15 @@ tr.show-desktop {
     box-shadow: rgb(0 0 0 / 10%) 0 2px 4px, rgb(26 26 29 / 8%) 0 4px 12px !important;
   }
 }
-.nav-brand-lg,
-.nav-links-lg {
+.nav-brand-xl,
+.nav-links-xl {
   display: none;
 }
 @media (min-width: 1127px) {
-  .nav-links-lg {
+  .nav-links-xl {
     display: table-cell;
   }
-  .nav-brand-lg {
+  .nav-brand-xl {
     display: block;
   }
   .nav-brand-xs {
@@ -34449,21 +34449,21 @@ tr.show-desktop {
 .atm_1r72ff3_t94yts:is(*, [x][x][x]):not(:focus) {
   width: 1px;
 }
-.menu-lg {
+.menu-xl {
   display: none;
 }
 @media (min-width: 1128px) {
   .menu-btn-xs {
     display: none;
   }
-  .menu-lg {
+  .menu-xl {
     display: block;
   }
 }
 ._10ejfg4u {
   visibility: hidden;
 }
-.gallery-lg {
+.gallery-xl {
   display: none;
 }
 @media (min-width: 744px) {
@@ -34474,7 +34474,7 @@ tr.show-desktop {
   .search-bar-xs {
     display: none;
   }
-  .gallery-lg {
+  .gallery-xl {
     display: block;
   }
 }
